# come-here

./: .gitignore  AGENTS.md  CLAUDE.md  HOW_TO_RUN.md  JETSON_EXECUTE_PROMPT.md  LATENCY_IMPLEMENTATION_TASKS.md  LICENSE  README.md  RUN_NOTES.md  SESSION_2026-04-09_hearing_rotation_calibration.md  TODO_ctranslate2_cuda.md  TODO_custom_doa.md  setup.sh
.github/workflows/: ci.yml
.planning/: HANDOFF.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
come_here_audio/: package.xml  setup.cfg  setup.py
come_here_audio/come_here_audio/: audio_direction_provider.py  audio_node.py  (+6 more)
come_here_behavior/: package.xml  setup.cfg  setup.py
come_here_behavior/come_here_behavior/: behavior_node.py  go2_bridge_node.py  safety_limits.py
come_here_behavior/config/: behavior_params.yaml
come_here_behavior/scripts/: forward_move_test.py  sport_to_twist_sim_bridge.py
come_here_behavior/test/: test_behavior_safety.py  test_bridge_safety.py  test_safety_limits.py  test_sport_to_twist_sim_bridge.py  test_state_machine.py
come_here_bringup/: package.xml  setup.cfg  setup.py
come_here_msgs/: CMakeLists.txt  package.xml
come_here_msgs/msg/: AudioDirection.msg  FaceDetection.msg  PersonDetection.msg  WakePhrase.msg
come_here_perception/: package.xml  setup.cfg  setup.py
training/: README.md  evaluate.py  finetune_whisper.py  record_samples.py
(+31 files in other folders)
